--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "index.html",
   "scripts": {
     "dev": "npx http-server -p 8000 -o",
-    "start": "npx http-server -p 8000"
+    "start": "npx http-server -p 8000",
+    "build": "echo 'Build completed'",
+    "vercel-build": "echo 'Vercel build completed'"
   },
   "keywords": [
     "villa",
     "guadeloupe",
-    "location"
+    "location",
+    "static-site",
+    "vercel"
   ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "http-server": "^14.1.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
