--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "npx http-server -p 8000 -o",
     "start": "npx http-server -p 8000",
-    "build": "echo 'Build completed'",
-    "vercel-build": "echo 'Vercel build completed'"
+    "build": "echo 'Static site build completed'"
   },
   "keywords": [
     "villa",
