--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
     {
       "src": "data/**/*",
       "use": "@vercel/static"
+    },
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     }
   ],
   "headers": [
