--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
     {
       "src": "api/**/*.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "api/*.js",
+      "use": "@vercel/node"
     }
   ],
   "headers": [
