--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "calypso-bay",
   "version": "1.0.0",
   "description": "Site web de la villa Calypso Bay",
-  "main": "api/simple.js",
+  "main": "public/index.html",
   "scripts": {
     "dev": "npx http-server -p 8000 -o",
     "start": "npx http-server -p 8000",
-    "build": "echo 'Static site build completed'"
+    "build": "echo 'Static site build completed - files in public/'"
   },
   "keywords": [
     "villa",
