--- a/env.example
+++ b/env.example
@@ -7,5 +7,8 @@ NEXT_PUBLIC_GAS_URL=https://script.google.com/macros/s/VOTRE_SCRIPT_ID/exec
 # URL du Google Apps Script pour le formulaire de contact (OBLIGATOIRE)
 NEXT_PUBLIC_GAS_CONTACT_URL=https://script.google.com/macros/s/VOTRE_SCRIPT_CONTACT_ID/exec
 
+# Clé API Google Maps (OBLIGATOIRE)
+NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=votre_cle_api_google_maps
+
 # Environnement (optionnel)
 NODE_ENV=development
