--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,16 +6,20 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4a90e2",
+  "orientation": "portrait-primary",
+  "scope": "/",
   "icons": [
     {
       "src": "images/logos/favicons/android-chrome-192x192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "images/logos/favicons/android-chrome-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "lang": "fr",
@@ -23,10 +27,12 @@
   "categories": ["travel", "accommodation", "vacation"],
   "screenshots": [
     {
-      "src": "/images/pic01.jpg",
+      "src": "images/pic01.webp",
       "sizes": "1280x720",
-      "type": "image/jpeg",
+      "type": "image/webp",
       "form_factor": "wide"
     }
-  ]
+  ],
+  "related_applications": [],
+  "prefer_related_applications": false
 }
